Remove duplicated url field with InternalSchemaRegistry